[AGAA] Start notes on 08_01 [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAAT/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/index.html
@@ -98,6 +98,14 @@ Analytic Geometry and Nonlinear Systems
 <a href="07_04.html">Parametric Equations</a>
 
 </li></ol>
+</li><li>
+Trigonometric Functions and Applications.
+
+<ol>
+<li>
+<a href="08_01.html">Angles and Their Measures</a>
+
+</li></ol>
 </li></ol>
 </div>
   
