[AAII] T3: finish notes on 01 introduction, start notes on 02 multiclassifier framework [skip ci]

--- a/src/Notes/Master/2C_2C/AAII/index.html
+++ b/src/Notes/Master/2C_2C/AAII/index.html
@@ -77,6 +77,20 @@
 <a href="T2/07_practice.html">Practice</a>
 
 </li></ol>
+ 
+<div id="Aprendizaje Automático II-Tema 3. Otras Combinaciones de Modelos"><h2 id="Tema 3. Otras Combinaciones de Modelos" class="header"><a href="#Aprendizaje Automático II-Tema 3. Otras Combinaciones de Modelos">Tema 3. Otras Combinaciones de Modelos</a></h2></div>
+
+<ol>
+<li>
+<a href="T3/01_introduccion.html">Introducción</a>
+
+</li><li>
+<a href="T3/02_marco_general.html">Marco general para la combinación de clasificadores</a>
+
+</li><li>
+<a href="T3/03_estrategias.html">Estrategias para la combinación de clasificadores</a>
+
+</li></ol>
 </div>
   
 
