--- a/src/Notes/Master/2C_2C/MBJ/T2/03.html
+++ b/src/Notes/Master/2C_2C/MBJ/T2/03.html
@@ -246,6 +246,121 @@ p(\alpha, \beta|y) = \frac{p(\theta, \alpha, \beta|y)}{p(\theta|\alpha, \beta, y
 \begin{align}
 \propto p(\alpha, \beta) \prod_{j=1}^J \frac{\Gamma(\alpha + \beta)\Gamma(\alpha + y_j)\Gamma(\beta + n_j - y_j)}{\Gamma(\alpha)\Gamma(\beta)\Gamma(\alpha + \beta + n_j)}
 \end{align}
+
+<div id="Bayesian analysis of conjugate hierarchical models-Application to the model for rat tumors-Choosing a standard parameterization and setting up a 'noninformative' hyperprior distribution"><h3 id="Choosing a standard parameterization and setting up a 'noninformative' hyperprior distribution" class="header"><a href="#Bayesian analysis of conjugate hierarchical models-Application to the model for rat tumors-Choosing a standard parameterization and setting up a 'noninformative' hyperprior distribution">Choosing a standard parameterization and setting up a 'noninformative' hyperprior distribution</a></h3></div>
+
+<p>
+Because we have no immediately available information about the distribution of tumor rates in populations of rats, we seek a relatively diffuse hyperprior distribution for \((\alpha, \beta)\).
+</p>
+
+
+<p>
+By reparameterizing the hyperparameters, we transform them into a space that may have more intuitive or meaningful interpretations. In this case, \(logit(\frac{\alpha}{\alpha + \beta}) = \log(\frac{\alpha}{\beta})\) represents the log-odds of \(\alpha\) relative to the total of \(\alpha\) and \(\beta\), providing a clear interpretation of the prior mean in the beta distribution for \(\theta\). Similarly, \(\log(\alpha + \beta)\) captures the logarithm of the "sample size," influencing the precision or spread of the distribution.
+</p>
+
+<p>
+Also the logit transformation helps stabilize the numerical computations, especially when dealing with probabilities or proportions that are bounded between 0 and 1. By working in the logit space, we avoid issues related to extreme values or boundaries that can arise in the original parameter space. And transforming the hyperparameters can facilitate the specification of appropriate prior distributions.
+</p>
+
+<p>
+One reasonable choice of diffuse hyperprior density is uniform on \((\frac{\alpha}{\alpha + \beta}, (\alpha + \beta)^{−1/2})\), which when multiplied by the appropriate Jacobian yields the following densities on the original scale,
+</p>
+
+\begin{align}
+p(\alpha, \beta) \propto (\alpha + \beta)^{-5/2}
+\end{align}
+
+<p>
+and on the natural transformed scale:
+</p>
+
+\begin{align}
+p(\log(\frac{\alpha}{\beta}), \log(\alpha + \beta)) \propto \alpha\beta(\alpha + \beta)^{-5/2}
+\end{align}
+
+<div id="Bayesian analysis of conjugate hierarchical models-Application to the model for rat tumors-Computing the marginal posterior density of the hyperparameters"><h3 id="Computing the marginal posterior density of the hyperparameters" class="header"><a href="#Bayesian analysis of conjugate hierarchical models-Application to the model for rat tumors-Computing the marginal posterior density of the hyperparameters">Computing the marginal posterior density of the hyperparameters</a></h3></div>
+
+<p>
+Now that we have established a full probability model for data and parameters, we compute the marginal posterior distribution of the hyperparameters.
+</p>
+
+<p>
+The next figure shows a contour plot of the unnormalized marginal posterior density on a grid of values of \((\log(\frac{\alpha}{\beta}), \log(\alpha + \beta))\)
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/marginal_contour_plot.png" alt="Contour plot of the marginal posterior distribution" style="width:550px;height:300px">
+To create the plot, we first compute the logarithm of the density function of \(p(\alpha, \beta|y)\) with prior density \(p(\alpha, \beta) \propto (\alpha + \beta)^{-5/2}\), multiplying by the Jacobian to obtain the density \(p(\log(\frac{\alpha}{\beta}), \log(\alpha + \beta)|y)\)
+</p>
+
+<p>
+The most obvious features of the contour plot are (1) the mode is not far from the point estimate (as we would expect), and (2) important parts of the marginal posterior distribution lie outside the range of the graph.
+</p>
+
+<p>
+We recompute the previous pdf in a different range \((\log(\frac{\alpha}{\beta}), \log(\alpha + \beta)) \in [-2.3, -1.3] \times [1, 5]\).
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/marginal_contour_plot_1.png" alt="Contour plot of the marginal posterior distribution" style="width:550px;height:300px">
+</p>
+
+<p>
+Figure \(5.3b\) displays \(1000\) random draws from the numerically computed posterior distribution. 
+The graphs show that the marginal posterior distribution of the hyperparameters, under this transformation, is approximately symmetric about the mode, roughly \((−1.75, 2.8)\). This corresponds to approximate values of \((\alpha, \beta) = (2.4, 14.0)\), which differs somewhat from the crude estimate obtained earlier.
+</p>
+
+<p>
+Having computed the relative posterior density at a grid that covers the effective range of \((\alpha, \beta)\), we normalize by approximating the distribution as a step function over the grid
+and setting the total probability in the grid to \(1\).
+</p>
+
+<div id="Bayesian analysis of conjugate hierarchical models-Application to the model for rat tumors-Sampling from the joint posterior distribution of parameters and hyperparameters"><h3 id="Sampling from the joint posterior distribution of parameters and hyperparameters" class="header"><a href="#Bayesian analysis of conjugate hierarchical models-Application to the model for rat tumors-Sampling from the joint posterior distribution of parameters and hyperparameters">Sampling from the joint posterior distribution of parameters and hyperparameters</a></h3></div>
+
+<p>
+We draw \(1000\) random samples from the joint posterior distribution of \((\alpha, \beta, \theta_1, \cdots, \theta_J)\), as follows.
+</p>
+
+<ol>
+<li>
+Simulate \(1000\) draws of \((\log(\frac{\alpha}{\beta}), \log(\alpha + \beta))\) from their posterior distribution using the same discrete-grid sampling procedure used to draw \((\alpha, \beta)\) for Figure \(3.3b\).
+
+</li><li>
+For \(l = 1, \cdots, 1000\):
+
+<ol>
+<li>
+Transform the \(l\)th draw of \((\log(\frac{\alpha}{\beta}), \log(\alpha + \beta))\) to the scale \((\alpha, \beta)\) to yield a draw of the hyperparameters from their marginal posterior distribution. 
+
+</li><li>
+For each \(j = 1, \cdots, J\), sample \(\theta_j\) from its conditional posterior distribution, \(\theta_j|\alpha, \beta, y \sim Beta(\alpha + y_j, \beta + n_j − y_j)\).
+
+</li></ol>
+</li></ol>
+<div id="Bayesian analysis of conjugate hierarchical models-Application to the model for rat tumors-Displaying the results"><h3 id="Displaying the results" class="header"><a href="#Bayesian analysis of conjugate hierarchical models-Application to the model for rat tumors-Displaying the results">Displaying the results</a></h3></div>
+
+<p>
+Figure \(5.4\) shows posterior medians and \(95\%\) intervals for the \(\theta_j\)’s, computed by simulation.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/posterior_values_simulation.png" alt="Posterior Values' Simulation" style="width:550px;height:300px">
+</p>
+
+<p>
+The results are superficially similar to what would be obtained based on a point estimate of the hyperparameters, which makes sense in this example, because of the fairly large number of experiments. But key differences remain, notably that posterior variability is higher in the full Bayesian analysis, reflecting posterior uncertainty in the hyperparameters.
+</p>
+
+
+<div id="Bayesian analysis of conjugate hierarchical models-Other Sources"><h2 id="Other Sources" class="header"><a href="#Bayesian analysis of conjugate hierarchical models-Other Sources">Other Sources</a></h2></div>
+
+<p>
+Thanks to how little I understand this book i will use other sources in order to properly understand Bayesian Hierarchical Modeling, the contents on the following chapter explains how hierarchical Bayesian models came to be and its appeal. Then on section 2 it lays out Hierarchical Nolmal Modeling followed by an explanation on hierarchical Beta-Binomial modeling on section 3.
+</p>
+
+<p>
+<a href="https://bayesball.github.io/BOOK/bayesian-hierarchical-modeling.html">Bayesian Hierarchical Modeling</a>
+</p>
 </div>
   
 
