--- a/src/Notes/Master/2C_2C/MBJ/T2/04_normal_model.html
+++ b/src/Notes/Master/2C_2C/MBJ/T2/04_normal_model.html
@@ -3,7 +3,7 @@
     <link rel="Stylesheet" type="text/css" href="../../../../../../src/style/index.css">
     <!-- Custom styling from vimwiki -->
     <link rel="Stylesheet" type="text/css" href="../../../../../../src/style/custom.css">
-    <title>T2. Modelos Jerarquicos</title>
+    <title>Normal model with exchangeable parameters</title>
   <script type="text/javascript" src="https://polyfill.io/v3/polyfill.min.js?features=es6" id="latex_script" data-description="Support for latex"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" data-description="Support for latex"></script><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/search.css" data-description="Styling for search"><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/atom-one-light.min.css" data-description="Code highlight"><link rel="icon" type="image/svg+xml" href="https://albamr09.github.io/public/icon.svg" data-description="Page icon"></head>
   <body>
     <a href="https://albamr09.github.io/" style="
@@ -31,37 +31,12 @@
     <hr>
     <div class="content">
 <p>
-<a href="../index.html">Back</a>
+<a href="index.html">Back</a>
 </p>
 
-<div id="T2. Modelos Jerarquicos"><h1 id="T2. Modelos Jerarquicos" class="header"><a href="#T2. Modelos Jerarquicos">T2. Modelos Jerarquicos</a></h1></div>
+<div id="Normal model with exchangeable parameters"><h1 id="Normal model with exchangeable parameters" class="header"><a href="#Normal model with exchangeable parameters">Normal model with exchangeable parameters</a></h1></div>
 
 <hr>
-
-<ol>
-<li>
-<a href="01.html">Constructing a parametrized prior distribution</a>
-
-</li><li>
-<a href="02.html">Exchangeability and hierarchical models</a>
-
-</li><li>
-<a href="03.html">Bayesian analysis of conjugate hierarchical models</a>
-
-</li><li>
-<a href="04_normal_model.html">Normal model with exchangeable parameters</a>
-
-</li></ol>
-<div id="T2. Modelos Jerarquicos-Appendix"><h2 id="Appendix" class="header"><a href="#T2. Modelos Jerarquicos-Appendix">Appendix</a></h2></div>
-
-<ul>
-<li>
-<a href="11_introduction.html">Introduction</a>
-
-</li><li>
-<a href="12_hierarchical_normal_modeling.html">Hierarchical Normal Modeling</a>
-
-</li></ul>
 </div>
   
 
