[AAII] T3: continue notes on section III.D [skip ci]

--- a/src/Notes/Master/2C_2C/AAII/T3/03_estrategias.html
+++ b/src/Notes/Master/2C_2C/AAII/T3/03_estrategias.html
@@ -299,6 +299,18 @@ In [50], the authors used the ANN, itself, as a model for classifiers combinatio
 In [51], the authors investigated the role of apriori knowledge using existing classifiers combination techniques, namely the Behavior Knowledge space and the D-S theory. The approach performs well when strongly correlated classifiers are combined. 
 </p>
 
+<p>
+In [16], the proposed method combines results from multiple classifiers using a hierarchical architecture, called Fuzzy Stacked Generalization (FSG). The authors used satellite images segmented and preprocessed to extract different sets of features. Each set is then used with one of \(K\) different classifiers.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/fsg_classifier.png" alt="FSG Classifier" style="width:600px;height:400px">
+</p>
+
+<p>
+Decisions from base-layer classifiers were aggregated to form a decision vector which is then fed to a meta-layer classifier to make the final decision. 
+</p>
+
 <div id="References"><h1 id="References" class="header"><a href="#References">References</a></h1></div>
 
 <p>
