Remove transform style directive from images [skip ci]

--- a/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/ExpectationMaximization/Expectation-Maximization Algorithms.html
+++ b/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/ExpectationMaximization/Expectation-Maximization Algorithms.html
@@ -124,7 +124,7 @@ For example, imagine you have the following dataset:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/anomaly_detection_data.png" alt="Dataset for Anomaly Detection" style="transform:translate(22vw,0)">
+<img src="https://albamr09.github.io/public/assets/anomaly_detection_data.png" alt="Dataset for Anomaly Detection">
 </p>
 
 <p>
@@ -132,7 +132,7 @@ It looks like the data comes from two different Gaussian distributions:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/anomaly_detection_multivariate_gaussian.png" alt="Multivariate Gaussian Distribution" style="transform:translate(30vw,0)">
+<img src="https://albamr09.github.io/public/assets/anomaly_detection_multivariate_gaussian.png" alt="Multivariate Gaussian Distribution">
 </p>
 
 <p>
@@ -208,7 +208,7 @@ For example, the following plot shows what a GMM derived from 3 mixture componen
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/gmm_example.png" alt="GMM Example" style="transform:translate(10vw,0)">
+<img src="https://albamr09.github.io/public/assets/gmm_example.png" alt="GMM Example">
 </p>
 
 <p>
@@ -458,7 +458,7 @@ Given any convex function (the inverse also applies to concave functions), if we
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/jensen_inequality.svg" alt="Jensen's Inequality" style="transform:translate(22vw, 0)">
+<img src="https://albamr09.github.io/public/assets/jensen_inequality.svg" alt="Jensen's Inequality">
 </p>
 
 <div id="Expectation Maximization-Generalized EM Algorithm-Motivation"><h3 id="Motivation" class="header"><a href="#Expectation Maximization-Generalized EM Algorithm-Motivation">Motivation</a></h3></div>
@@ -502,7 +502,7 @@ And on the second iteration:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/e_step_2.svg" alt="Second iteration E-Step" style="transform: translate(12vw, 0)">
+<img src="https://albamr09.github.io/public/assets/e_step_2.svg" alt="Second iteration E-Step">
 </p>
 
 <p>
