--- a/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/NeuralNetworks/Neural Networks.html
+++ b/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/NeuralNetworks/Neural Networks.html
@@ -115,7 +115,7 @@ Linear part: we denote the linear part like \(z^{[i]}\), where \(i\) is the curr
 </li></ul>
   
 <p>
-  <img src="https://albamr09.github.io/public/assets/neuron.svg" alt="Linear Part Neuron Example" style="transform: translate(22vw, 0)">
+  <img src="https://albamr09.github.io/public/assets/neuron.svg" alt="Linear Part Neuron Example">
 </p>
 <ul>
 <li>
@@ -124,7 +124,7 @@ Activation part
 </li></ul>
   
 <p>
-  <img src="https://albamr09.github.io/public/assets/neuron_activation.svg" alt="Activation Part Neuron Example" style="transform: translate(22vw, 0)">
+  <img src="https://albamr09.github.io/public/assets/neuron_activation.svg" alt="Activation Part Neuron Example">
 </p>
 <ul>
 <li>
@@ -133,7 +133,7 @@ Activation part
 </li></ul>
   
 <p>
-  <img src="https://albamr09.github.io/public/assets/layer.svg" alt="Layer Example" style="transform: translate(22vw, 0)">
+  <img src="https://albamr09.github.io/public/assets/layer.svg" alt="Layer Example">
 </p>
 
 <div id="Neural Networks-Architecture-Algorithm"><h3 id="Algorithm" class="header"><a href="#Neural Networks-Architecture-Algorithm">Algorithm</a></h3></div>
@@ -162,7 +162,7 @@ The output layer will be different depending on the problem we are tackling. For
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/nn_multiclass.svg" alt="NN with Multiclass" style="transform: translate(7vw, 0)">
+<img src="https://albamr09.github.io/public/assets/nn_multiclass.svg" alt="NN with Multiclass">
 </p>
 
 <p>
@@ -176,7 +176,7 @@ The previous classifier allows for outputting multiples classes in the result, t
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/nn_multiclass_softmax.svg" alt="NN with Multiclass using Softmax" style="transform: translate(7vw, 0)">
+<img src="https://albamr09.github.io/public/assets/nn_multiclass_softmax.svg" alt="NN with Multiclass using Softmax">
 </p>
 
 <p>
@@ -190,7 +190,7 @@ On linear regression we do not want the activation function to be linear, becaus
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/relu.svg" alt="ReLu Function" style="transform: translate(14vw, 0)">
+<img src="https://albamr09.github.io/public/assets/relu.svg" alt="ReLu Function">
 </p>
 
 <div id="Neural Networks-Architecture-Output Layer-Loss Function"><h4 id="Loss Function" class="header"><a href="#Neural Networks-Architecture-Output Layer-Loss Function">Loss Function</a></h4></div>
@@ -548,7 +548,7 @@ Why do we need activation functions? Well, suppose you have the following networ
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/nn_no_activation_function.svg" alt="Neural Network Without Activation Function" style="transform: translate(22vw)">
+<img src="https://albamr09.github.io/public/assets/nn_no_activation_function.svg" alt="Neural Network Without Activation Function">
 </p>
 
 <p>
@@ -658,7 +658,7 @@ Suppose you have the following network, where the activation function is the ide
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/vanishing_exploding_gradients.svg" alt="Vanishing and Exploding Gradients" style="transform: translate(22vw, 0); margin: 5px">
+<img src="https://albamr09.github.io/public/assets/vanishing_exploding_gradients.svg" alt="Vanishing and Exploding Gradients">
 </p>
 
 <p>
@@ -724,7 +724,7 @@ Given a single neuron:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/initialize_weights.svg" alt="Weight Initialization" style="transform: translate(22vw, 0)">
+<img src="https://albamr09.github.io/public/assets/initialize_weights.svg" alt="Weight Initialization">
 </p>
 
 <p>
@@ -772,7 +772,7 @@ Mini Batch Gradient Descent is a trade off between batch gradient descent and st
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/mini_batch_vs_batch.png" alt="Mini Batch Gradient Descent VS Batch Gradient Descent" style="transform: translate(17vw, 0)">
+<img src="https://albamr09.github.io/public/assets/mini_batch_vs_batch.png" alt="Mini Batch Gradient Descent VS Batch Gradient Descent">
 </p>
 
 <p>
@@ -786,7 +786,7 @@ This algorithm combines Gradient Descent and momentum. Suppose you have the foll
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/gradient_descent.svg" alt="Gradient Descent" style="transform: translate(22vw, 0)">
+<img src="https://albamr09.github.io/public/assets/gradient_descent.svg" alt="Gradient Descent">
 </p>
 
 <p>
@@ -802,7 +802,7 @@ Horizontal axis: its value it's maintained because the past and present gradient
 
 </li></ul>
 <p>
-<img src="https://albamr09.github.io/public/assets/momentum_gradient_descent.svg" alt="Gradient Descent wiht Momentum" style="transform: translate(22vw, 0)">
+<img src="https://albamr09.github.io/public/assets/momentum_gradient_descent.svg" alt="Gradient Descent wiht Momentum">
 </p>
 
 <p>
