--- a/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/SVM/Functional Margin.html
+++ b/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/SVM/Functional Margin.html
@@ -69,7 +69,7 @@ As we can see in the following graph, the bigger \(z = \Theta x\) the closer \(g
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/sigmoid_function_graph.png" alt="Sigmoid Function Graph" style="transform: translate(20vw, 0%)">
+<img src="https://albamr09.github.io/public/assets/sigmoid_function_graph.png" alt="Sigmoid Function Graph">
 </p>
 
 <div id="Functional Margin-Formal Definition"><h3 id="Formal Definition" class="header"><a href="#Functional Margin-Formal Definition">Formal Definition</a></h3></div>
