--- a/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/SVM/Geometric Margin.html
+++ b/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/SVM/Geometric Margin.html
@@ -45,7 +45,7 @@ First of all, let's assume we have a dataset that is linearly separable like:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/geometric_margin.png" alt="Geometric Margin" style="width:400px;height:300px;transform: translate(22vw,0%)">
+<img src="https://albamr09.github.io/public/assets/geometric_margin.png" alt="Geometric Margin" style="width:400px;height:300px;">
 </p>
 
 <p>
