--- a/src/Notes/DataScience/(DS0002)_AIRobotics/ParticleFilters/Particle Filters.html
+++ b/src/Notes/DataScience/(DS0002)_AIRobotics/ParticleFilters/Particle Filters.html
@@ -108,7 +108,7 @@ So, in a first instance, given a floor plan the robot has to perform global loca
 
 
 <p>
-<img src="https://albamr09.github.io/public/assets/particle_filter_1.png" alt="Initial State in Particle Filter" style="transform: translate(50%, 0);">
+<img src="https://albamr09.github.io/public/assets/particle_filter_1.png" alt="Initial State in Particle Filter">
 </p>
 
 <p>
@@ -126,8 +126,8 @@ So, initially the robot is completely uncertain as to where it is, which derives
 
 <p>
 <img src="https://albamr09.github.io/public/assets/particle_filter_2.png" alt="Update State in Particle Filter" style="width: 500px">
-<img src="https://albamr09.github.io/public/assets/particle_filter_3.png" alt="Update State in Particle Filter" style="transform: translate(10%, 0); width: 500px">
-<img src="https://albamr09.github.io/public/assets/particle_filter_4.png" alt="Update State in Particle Filter" style="transform: translate(20%, 0); width: 500px">
+<img src="https://albamr09.github.io/public/assets/particle_filter_3.png" alt="Update State in Particle Filter" style="width: 500px">
+<img src="https://albamr09.github.io/public/assets/particle_filter_4.png" alt="Update State in Particle Filter" style="width: 500px">
 </p>
 
 <p>
@@ -187,7 +187,7 @@ So, it's time for the resampling. We have to choose \(N\) particles from the ove
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/resampling_1.png" alt="Resampling" style="transform: translate(30vw, 0)">
+<img src="https://albamr09.github.io/public/assets/resampling_1.png" alt="Resampling">
 </p>
 
 <p>
@@ -195,7 +195,7 @@ Note we allow replacement, so we can draw multiple copies of the same particle \
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/resampling_2.png" alt="Resampling" style="height: 400px; transform: translate(30vw, 0)">
+<img src="https://albamr09.github.io/public/assets/resampling_2.png" alt="Resampling" style="height: 400px;">
 </p>
 <pre><code>As you can see in the previous image, we have drawn three times \(p_2\), probably because the associated \(\alpha_2\) was larger than the rest of the \(\alpha\). 
 </code></pre>
