--- a/src/Notes/DataScience/(DS0002)_AIRobotics/SLAM/SLAM.html
+++ b/src/Notes/DataScience/(DS0002)_AIRobotics/SLAM/SLAM.html
@@ -70,7 +70,7 @@ Suppose we have a robot that has followed the following path:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/robot_path.png" alt="Robot Path" style="transform: translate(50%, 0)">
+<img src="https://albamr09.github.io/public/assets/robot_path.png" alt="Robot Path">
 </p>
 
 <p>
@@ -89,7 +89,7 @@ Relative measurement constraints: these are the segment between each position ve
 
 </li></ul>
 <p>
-<img src="https://albamr09.github.io/public/assets/graph_slam_constraints.png" alt="Graph SLAM Constraints" style="transform: translate(50%, 0)">
+<img src="https://albamr09.github.io/public/assets/graph_slam_constraints.png" alt="Graph SLAM Constraints">
 </p>
 
 <p>
@@ -272,7 +272,7 @@ Given the following motion:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/motion_measurement_noise.png" alt="Motion and Measurement with Noise" style="transform: translate(50%, 0)">
+<img src="https://albamr09.github.io/public/assets/motion_measurement_noise.png" alt="Motion and Measurement with Noise">
 </p>
 
 <p>
