--- a/src/Notes/DataScience/(DS0003)_Online_Training_Mobile_Robotics/KalmanFilter/Extended Kalman Filter.html
+++ b/src/Notes/DataScience/(DS0003)_Online_Training_Mobile_Robotics/KalmanFilter/Extended Kalman Filter.html
@@ -104,7 +104,7 @@ Before, when we transformed our belief (a Gaussian) with a linear transformation
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/gaussian_under_linear_transformation.png" alt="Gaussian under linear transformation" style="transform:translate(30vw,0)">
+<img src="https://albamr09.github.io/public/assets/gaussian_under_linear_transformation.png" alt="Gaussian under linear transformation">
 </p>
 
 <p>
@@ -112,7 +112,7 @@ Where the distribution of the upper left is the result of transforming the distr
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/gaussian_under_non_linear_transformation.png" alt="Gaussian under non linear transformation" style="transform:translate(30vw,0)">
+<img src="https://albamr09.github.io/public/assets/gaussian_under_non_linear_transformation.png" alt="Gaussian under non linear transformation">
 </p>
 
 <p>
@@ -182,7 +182,7 @@ And we can illustrate it graphically:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/jacobian.png" alt="Jacobian" style="transform: translate(30vw, 0)">
+<img src="https://albamr09.github.io/public/assets/jacobian.png" alt="Jacobian">
 </p>
 
 <p>
@@ -196,7 +196,7 @@ So, let's revisit the transformation of our Gaussian belief. Remember we had, th
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/gaussian_under_non_linear_transformation.png" alt="Gaussian under non linear transformation" style="transform:translate(30vw,0)">
+<img src="https://albamr09.github.io/public/assets/gaussian_under_non_linear_transformation.png" alt="Gaussian under non linear transformation">
 </p>
 
 <p>
@@ -204,7 +204,7 @@ What we do now, is take the mean of our belief \(\mu_t\) and approximate it loca
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/gaussian_under_approximated_linear_transformation.png" alt="Gaussian under non linear transformation" style="transform:translate(30vw,0)">
+<img src="https://albamr09.github.io/public/assets/gaussian_under_approximated_linear_transformation.png" alt="Gaussian under non linear transformation">
 </p>
 
 <div id="Extended Kalman Filter-Local Linearization-Error Under Local Linearization"><h3 id="Error Under Local Linearization" class="header"><a href="#Extended Kalman Filter-Local Linearization-Error Under Local Linearization">Error Under Local Linearization</a></h3></div>
@@ -348,7 +348,7 @@ To take into account the linearized models, we have to make a few changes to the
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/EKF_algorithm.png" alt="Extended Kalman Filter Algorithm" style="transform:translate(30vw, 0)">
+<img src="https://albamr09.github.io/public/assets/EKF_algorithm.png" alt="Extended Kalman Filter Algorithm">
 </p>
 
 <ul>
