--- a/src/Notes/DataScience/(DS0003)_Online_Training_Mobile_Robotics/Models/Motion Model.html
+++ b/src/Notes/DataScience/(DS0003)_Online_Training_Mobile_Robotics/Models/Motion Model.html
@@ -47,7 +47,7 @@ The motion of the system will always contain uncertainty, because it does not mo
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/actual_path.png" alt="Actual System Path" style="transform:translate(30vw, 0)">
+<img src="https://albamr09.github.io/public/assets/actual_path.png" alt="Actual System Path">
 </p>
 
 <p>
@@ -55,7 +55,7 @@ However the internal estimate of the system yields the following result:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/estimated_path.png" alt="Estimated System Path" style="transform:translate(30vw, 0)">
+<img src="https://albamr09.github.io/public/assets/estimated_path.png" alt="Estimated System Path">
 </p>
 
 <p>
@@ -107,7 +107,7 @@ Some errors that cause wrong movement estimations are the following:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/motion_model_errors.png" alt="Causes for Error on Motion Estimation" style="transform: translate(30vw, 0)">
+<img src="https://albamr09.github.io/public/assets/motion_model_errors.png" alt="Causes for Error on Motion Estimation">
 </p>
 
 <p>
@@ -141,7 +141,7 @@ Each part is illustrated in the following image:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/odomery_motion_model.png" alt="Odometry Motion Model" style="transform:translate(30vw, 0)">
+<img src="https://albamr09.github.io/public/assets/odomery_motion_model.png" alt="Odometry Motion Model">
 </p>
 </div>
   
