--- a/src/Notes/DataScience/Other/UKF/index.html
+++ b/src/Notes/DataScience/Other/UKF/index.html
@@ -127,7 +127,7 @@ which means \(\Delta x^{(i)}\) is the i-th column of the covariance matrix multi
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/sigma_points_1.png" alt="Sigma Points" style="transform: translate(30vw, 0)">
+<img src="https://albamr09.github.io/public/assets/sigma_points_1.png" alt="Sigma Points">
 </p>
 
 <p>
@@ -147,7 +147,7 @@ Such that we obtain:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/sigma_points_2.png" alt="Sigma Points" style="transform: translate(30vw, 0)">
+<img src="https://albamr09.github.io/public/assets/sigma_points_2.png" alt="Sigma Points">
 </p>
 
 <p>
@@ -155,7 +155,7 @@ From the following image we can see the \(4\) points we obtained seem to be a go
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/sigma_points_3.png" alt="Sigma Points" style="transform: translate(30vw, 0)">
+<img src="https://albamr09.github.io/public/assets/sigma_points_3.png" alt="Sigma Points">
 </p>
 
 <p>
@@ -177,7 +177,7 @@ Such that we have the following situation:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/transformed_sigma_points.png" alt="Transformed Sigma Points" style="transform: translate(30vw, 0)">
+<img src="https://albamr09.github.io/public/assets/transformed_sigma_points.png" alt="Transformed Sigma Points">
 </p>
 
 <p>
@@ -201,7 +201,7 @@ And so, we obtain the following estimated mean:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/mean_transformed_sigma_points.png" alt="Mean of Transformed Sigma Points" style="transform: translate(30vw, 0)">
+<img src="https://albamr09.github.io/public/assets/mean_transformed_sigma_points.png" alt="Mean of Transformed Sigma Points">
 </p>
 <div id="Unscented Kalman Filter-Selecting less points to sample-Covariance approximation"><h3 id="Covariance approximation" class="header"><a href="#Unscented Kalman Filter-Selecting less points to sample-Covariance approximation">Covariance approximation</a></h3></div>
 
@@ -222,7 +222,7 @@ Which given us the following estimated covariance:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/covariance_transformed_sigma_points.png" alt="Covariance of Transformed Sigma Points" style="transform: translate(30vw, 0)">
+<img src="https://albamr09.github.io/public/assets/covariance_transformed_sigma_points.png" alt="Covariance of Transformed Sigma Points">
 </p>
 
 <div id="Unscented Kalman Filter-General Unscented Transformation"><h2 id="General Unscented Transformation" class="header"><a href="#Unscented Kalman Filter-General Unscented Transformation">General Unscented Transformation</a></h2></div>
