Fix latex typo [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAAT/08_01.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/08_01.html
@@ -123,7 +123,7 @@ An angle \(\theta\) whose vertex is at the center of a circle is called <span id
 </p>
 
 <p>
-In general, if \(\theta\) is a central angle in a circle of radius \(r\), and \(\theta intercepts an arc of lengt \)s\(, the radian measure of \)\theta\( is \)\frac{s}{r}$.
+In general, if \(\theta\) is a central angle in a circle of radius \(r\), and \(\theta\) intercepts an arc of lengt \(s\), the radian measure of \(\theta\) is \(\frac{s}{r}\).
 </p>
 
 <div id="Angles and Their Measures-Radian Measure-Degree to Radian Conversion"><h3 id="Degree to Radian Conversion" class="header"><a href="#Angles and Their Measures-Radian Measure-Degree to Radian Conversion">Degree to Radian Conversion</a></h3></div>
