[MBJ] T2: finish notes on external sources [skip ci]

--- a/src/Notes/Master/2C_2C/MBJ/T2/index.html
+++ b/src/Notes/Master/2C_2C/MBJ/T2/index.html
@@ -54,12 +54,23 @@
 </li></ol>
 <div id="T2. Modelos Jerarquicos-Appendix"><h2 id="Appendix" class="header"><a href="#T2. Modelos Jerarquicos-Appendix">Appendix</a></h2></div>
 
+<p>
+Thanks to how little I understand this book i will use other sources in order to properly understand Bayesian Hierarchical Modeling, the contents on the following chapter explains how hierarchical Bayesian models came to be and its appeal. Then on section 2 it lays out Hierarchical Nolmal Modeling followed by an explanation on hierarchical Beta-Binomial modeling on section 3.
+</p>
+
+<p>
+<a href="https://bayesball.github.io/BOOK/bayesian-hierarchical-modeling.html">Bayesian Hierarchical Modeling</a>
+</p>
+
 <ul>
 <li>
 <a href="11_introduction.html">Introduction</a>
 
 </li><li>
 <a href="12_hierarchical_normal_modeling.html">Hierarchical Normal Modeling</a>
+
+</li><li>
+<a href="13_hierarchical_beta_binomial_modeling.html">Hierarchical Beta-Binomial Modeling</a>
 
 </li></ul>
 </div>
